4 Apr 2006: Wouter
	- Addes EACCES to the netio dispatch error bailout.
	- Removed EACCESS (probably due to log_msg), error on close
	  xfrd pipe is small, main process closes its end, and hopes for 
	  the best).
	- review: return on error condition in xfrd_tcp_open fixed.
	- review: expired when time >= expire_time, so it will not wait
	  for the retry after expire until it will detect the expiredness.
	- removed duplicate lines from xfrd_handle_zone_timeout.
	- review: copy of uint32_t using memcpy to avoid unaligned memory
	  accesses.
	- review: fd=-1 removed from set_refresh_now; only does timer.
	- on a tcp timeout it will retry immediately (instead of waiting
	  another retry timeout). This means if you set refresh_now, it will
	  interrupt a tcp-timer for a fresh retry with the next master.
	- put null in buffer for xfrd read state.
	- log msg uses string that exists instead of overwritten buffer.
	- read entry sets refresh depending on current time,
	  and makes sure not to check soa contents if none provided.
	  added explanatory comments.
	- EACCES back in check.
	- server_main first checks for terminated children, then select().
	  So when select is interrupted, by kill or quitting children,
	  it will first see if it has to quit itself, before restarting
	  the children.
	- destroy tempregion xfrd read on error.
	- check for serial existance in xfrd_handle_incoming_soa.
	- handle_incoming_soa uses set_timer_refresh routine.
	  and can handle expire times < refresh times.
	- log msg for udp socket() error.
	- review: xfrd_parse_soa_info email parse uses correct buffer spot.
	- added a lowerbound to refresh interval (=1 second now).
	- upon receipt of a IXFR, if the serial is older than the notified
	  serial, the zone stays refreshing (but the ixfr is saved).

3 Apr 2006: Wouter
	- Added buffer length check to internal ipc.
	- split out packet_read_query_section from the process_query_section
	  routine (and moved to packet.c/h).